<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:text="@string/title"
        android:textColor="@color/Red"
        android:layout_marginBottom="40dp"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_1"
        android:inputType="number"
        android:minHeight="48dp"></EditText>


    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_2"
        android:inputType="number"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:weightSum="4"
        >
    <Button
        android:id="@+id/plus_btu"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="30sp"
      android:layout_gravity="center"
      android:text="@string/plus_sign"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_weight="1"
        android:background="@color/Beige"
        />

    <Button
        android:id="@+id/minus_btu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:text="@string/minuse_sign"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_weight="1"
        android:background="@color/Beige"
        />
        <Button
            android:id="@+id/times_btu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/times_sign"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:background="@color/Beige"
            />
        <Button
            android:id="@+id/divid_btu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/divid_sign"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:background="@color/Beige"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/restult_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="30sp"></TextView>
</LinearLayout>